--- a/linopy/SimpleModel.ipynb
+++ b/linopy/SimpleModel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,6 +86,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"Creating parameters from a DataFrame\"\n",
+    "data = pd.DataFrame({\n",
+    "    'capital_cost': [1500, 2000, 65, 20],\n",
+    "    'fixedcost': [0.015, 0.01, 0.05, 0.01],\n",
+    "    'AnnuF': [0.13, 0.12, 0.40, 0.13],\n",
+    "    'variablecost': [0.2,  0.001, 0.001, 0.001],\n",
+    "    'storage_eficiency':[0,  0, 0.65, 0.85],\n",
+    "    'chargefactor': [0,  0, 0.9, 0.92],\n",
+    "    'recoverfactor':[0,  0, 0.8, 0.9]\n",
+    "})\n",
+    "Parameters = xr.Dataset.from_dataframe(data.set_index(tech))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -139,14 +158,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "objective = (capital_cost*capacity*(AnnuF+fixedcost)*len(h)/8760).sum() + (power.loc[['Sti', 'PV', 'ES']]*variablecost.loc[['Sti', 'PV', 'ES']]).sum() + (heat.loc['HS']*variablecost.loc['HS']).sum()\n",
-    "m.add_objective(objective)\n",
-    "\n"
+    "m.add_objective(objective)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearExpression\n",
+       "----------------\n",
+       "+0.5959 capacity[Sti] + 0.7123 capacity[PV] + 0.08014 capacity[ES] ... +0.001 Heat Generation[HS, 21] + 0.001 Heat Generation[HS, 22] + 0.001 Heat Generation[HS, 23]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "objective"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearExpression\n",
+       "----------------\n",
+       "+0.5959 capacity[Sti] + 0.7123 capacity[PV] + 0.08014 capacity[ES] + 0.007671 capacity[HS]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(Parameters['capital_cost']*capacity*(Parameters['AnnuF']+Parameters['fixedcost'])*len(h)/8760).sum()"
    ]
   },
   {
@@ -161,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +273,7 @@
        "'Crear restricciones de almacenamiento con condicionales'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +335,7 @@
        "('ok', 'optimal')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +394,7 @@
        "0     0.35  0.932941  3.856561  0.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +611,7 @@
        "23    0.350000 -0.000000  0.000000"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -933,9 +995,9 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
        "       0., 0., 0., 0., 0., 0., 0.])\n",
        "Coordinates:\n",
-       "  * hours    (hours) int64 0 1 2 3 4 5 6 7 8 9 ... 14 15 16 17 18 19 20 21 22 23</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'solution'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>hours</span>: 24</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-8713e2b9-3079-41d8-8ac7-57068c429f1f' class='xr-array-in' type='checkbox' checked><label for='section-8713e2b9-3079-41d8-8ac7-57068c429f1f' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0.])</pre></div></div></li><li class='xr-section-item'><input id='section-57dc0ba7-367c-4ad4-8ade-75925ad8a70c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-57dc0ba7-367c-4ad4-8ade-75925ad8a70c' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>hours</span></div><div class='xr-var-dims'>(hours)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0 1 2 3 4 5 6 ... 18 19 20 21 22 23</div><input id='attrs-29b8911e-aa0f-4920-bae7-d0138eb0a690' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-29b8911e-aa0f-4920-bae7-d0138eb0a690' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-09e56ddd-68fd-4cb9-b54b-4a4fffe55616' class='xr-var-data-in' type='checkbox'><label for='data-09e56ddd-68fd-4cb9-b54b-4a4fffe55616' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20, 21, 22, 23], dtype=int64)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3aaa0693-40c8-43db-a987-1425f3802979' class='xr-section-summary-in' type='checkbox'  ><label for='section-3aaa0693-40c8-43db-a987-1425f3802979' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>hours</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-02857025-d98d-4947-bcd9-9758135ee539' class='xr-index-data-in' type='checkbox'/><label for='index-02857025-d98d-4947-bcd9-9758135ee539' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(RangeIndex(start=0, stop=24, step=1, name=&#x27;hours&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-88011858-9ae5-4610-839b-1d112813bc05' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-88011858-9ae5-4610-839b-1d112813bc05' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "  * hours    (hours) int64 0 1 2 3 4 5 6 7 8 9 ... 14 15 16 17 18 19 20 21 22 23</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'solution'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>hours</span>: 24</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-8a3dd6bb-b416-4741-8018-7e57da60cf25' class='xr-array-in' type='checkbox' checked><label for='section-8a3dd6bb-b416-4741-8018-7e57da60cf25' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0.])</pre></div></div></li><li class='xr-section-item'><input id='section-be81ce5b-8f1d-4586-9ffd-c89659e37361' class='xr-section-summary-in' type='checkbox'  checked><label for='section-be81ce5b-8f1d-4586-9ffd-c89659e37361' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>hours</span></div><div class='xr-var-dims'>(hours)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0 1 2 3 4 5 6 ... 18 19 20 21 22 23</div><input id='attrs-c91f65c8-b925-41c2-9605-74df36fcb56e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c91f65c8-b925-41c2-9605-74df36fcb56e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-634e304e-26d5-409b-95a4-aae59bd7fca1' class='xr-var-data-in' type='checkbox'><label for='data-634e304e-26d5-409b-95a4-aae59bd7fca1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+       "       18, 19, 20, 21, 22, 23], dtype=int64)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-341c7b18-995e-4c9d-9a03-c3be4d9c9c6b' class='xr-section-summary-in' type='checkbox'  ><label for='section-341c7b18-995e-4c9d-9a03-c3be4d9c9c6b' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>hours</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-f33e21a5-4a3b-4e99-aa44-628558864c30' class='xr-index-data-in' type='checkbox'/><label for='index-f33e21a5-4a3b-4e99-aa44-628558864c30' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(RangeIndex(start=0, stop=24, step=1, name=&#x27;hours&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3ff2a9a3-8757-457b-bf0a-a8dcc7a36f41' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-3ff2a9a3-8757-457b-bf0a-a8dcc7a36f41' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'solution' (hours: 24)>\n",
@@ -945,7 +1007,7 @@
        "  * hours    (hours) int64 0 1 2 3 4 5 6 7 8 9 ... 14 15 16 17 18 19 20 21 22 23"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1199,7 @@
        "23  0.700000  0.0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1554,14 +1616,6 @@
       "[21]: +1 Heat Generation[Sti, 21] + 1 Heat Generation[HS, 21] - 1 Heat2Storage[21] ≥ -0.0\n",
       "[22]: +1 Heat Generation[Sti, 22] + 1 Heat Generation[HS, 22] - 1 Heat2Storage[22] ≥ -0.0\n",
       "[23]: +1 Heat Generation[Sti, 23] + 1 Heat Generation[HS, 23] - 1 Heat2Storage[23] ≥ -0.0\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
