--- a/linopy/SimpleModel.ipynb
+++ b/linopy/SimpleModel.ipynb
@@ -168,8 +168,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using DataArrays to create objective function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -177,16 +184,23 @@
       "text/plain": [
        "LinearExpression\n",
        "----------------\n",
-       "+0.5959 capacity[Sti] + 0.7123 capacity[PV] + 0.08014 capacity[ES] ... +0.001 Heat Generation[HS, 21] + 0.001 Heat Generation[HS, 22] + 0.001 Heat Generation[HS, 23]"
+       "+0.5959 capacity[Sti] + 0.7123 capacity[PV] + 0.08014 capacity[ES] + 0.007671 capacity[HS]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "objective"
+    "(capital_cost*capacity*(AnnuF+fixedcost)*len(h)/8760).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using DataSets to create objective function"
    ]
   },
   {
