--- a/linopy/SimpleModel.ipynb
+++ b/linopy/SimpleModel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,18 +68,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
-    "capital_cost = xr.DataArray([1500, 2000, 65, 20], dims= 'tech', coords={'tech': tech}, name='Capital Costs')\n",
-    "fixedcost = xr.DataArray([0.015,  0.01, 0.05, 0.01], dims= 'tech', coords={'tech': tech}, name=\"fixed costs %\")\n",
-    "AnnuF = xr.DataArray([0.13,  0.12, 0.40, 0.13], dims= 'tech', coords={'tech': tech}, name=\"Annualization Factor \")\n",
-    "variablecost =  xr.DataArray([0.2,  0.001, 0.001, 0.001], dims= 'tech', coords={'tech': tech}, name=\"variable cost $/kW\") # including fuel cost and fuel consumption\n",
-    "# fuelcost = xr.DataArray([0.0475,  0, 0, 0], dims= 'tech', coords={'tech': tech}, name=\"fuel cost $/kWh\")\n",
-    "storage_eficiency = xr.DataArray([0,  0, 0.65, 0.85], dims= 'tech', coords={'tech': tech}, name=\"storage eficiency\")\n",
-    "chargefactor = xr.DataArray([0,  0, 0.9, 0.92],dims= 'tech', coords={'tech': tech}, name=\"charge factor\")\n",
-    "recoverfactor = xr.DataArray([0,  0, 0.8, 0.9], dims= 'tech', coords={'tech': tech}, name=\"recovery factor\")\n",
+    "# capital_cost = xr.DataArray([1500, 2000, 65, 20], dims= 'tech', coords={'tech': tech}, name='Capital Costs')\n",
+    "# fixedcost = xr.DataArray([0.015,  0.01, 0.05, 0.01], dims= 'tech', coords={'tech': tech}, name=\"fixed costs %\")\n",
+    "# AnnuF = xr.DataArray([0.13,  0.12, 0.40, 0.13], dims= 'tech', coords={'tech': tech}, name=\"Annualization Factor \")\n",
+    "# variablecost =  xr.DataArray([0.2,  0.001, 0.001, 0.001], dims= 'tech', coords={'tech': tech}, name=\"variable cost $/kW\") # including fuel cost and fuel consumption\n",
+    "# # fuelcost = xr.DataArray([0.0475,  0, 0, 0], dims= 'tech', coords={'tech': tech}, name=\"fuel cost $/kWh\")\n",
+    "# storage_eficiency = xr.DataArray([0,  0, 0.65, 0.85], dims= 'tech', coords={'tech': tech}, name=\"storage eficiency\")\n",
+    "# chargefactor = xr.DataArray([0,  0, 0.9, 0.92],dims= 'tech', coords={'tech': tech}, name=\"charge factor\")\n",
+    "# recoverfactor = xr.DataArray([0,  0, 0.8, 0.9], dims= 'tech', coords={'tech': tech}, name=\"recovery factor\")\n",
     "AvailabilityFactor = xr.DataArray(np.ones((24, 4)), coords = [h, tech])\n",
     "AvailabilityFactor[:,1] = Sun\n",
     "Demands = xr.DataArray(np.column_stack((PowerDemand, HeatDemand)), coords=[h, Demand])"
@@ -87,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"Creating parameters from a DataFrame\"\n",
+    "\"Creating parameters from a DataFrame wich could be imported from a csv or xlsx file\"\n",
     "data = pd.DataFrame({\n",
     "    'capital_cost': [1500, 2000, 65, 20],\n",
     "    'fixedcost': [0.015, 0.01, 0.05, 0.01],\n",
@@ -101,7 +101,12 @@
     "    'chargefactor': [0,  0, 0.9, 0.92],\n",
     "    'recoverfactor':[0,  0, 0.8, 0.9]\n",
     "})\n",
-    "Parameters = xr.Dataset.from_dataframe(data.set_index(tech))\n"
+    "\n",
+    "Parameters = xr.Dataset.from_dataframe(data.set_index(tech))\n",
+    "def store_parameters(parameters):\n",
+    "    for i in Parameters.data_vars:\n",
+    "        locals()[i] = Parameters[i]   \n",
+    "store_parameters(Parameters)\n"
    ]
   },
   {
@@ -113,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -158,11 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "objective = (capital_cost*capacity*(AnnuF+fixedcost)*len(h)/8760).sum() + (power.loc[['Sti', 'PV', 'ES']]*variablecost.loc[['Sti', 'PV', 'ES']]).sum() + (heat.loc['HS']*variablecost.loc['HS']).sum()\n",
     "m.add_objective(objective)"
    ]
@@ -176,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +191,7 @@
        "+0.5959 capacity[Sti] + 0.7123 capacity[PV] + 0.08014 capacity[ES] + 0.007671 capacity[HS]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +220,7 @@
        "+0.5959 capacity[Sti] + 0.7123 capacity[PV] + 0.08014 capacity[ES] + 0.007671 capacity[HS]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 227,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +291,7 @@
        "'Crear restricciones de almacenamiento con condicionales'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +353,7 @@
        "('ok', 'optimal')"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +412,7 @@
        "0     0.35  0.932941  3.856561  0.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +629,7 @@
        "23    0.350000 -0.000000  0.000000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -1009,9 +1013,9 @@
        "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
        "       0., 0., 0., 0., 0., 0., 0.])\n",
        "Coordinates:\n",
-       "  * hours    (hours) int64 0 1 2 3 4 5 6 7 8 9 ... 14 15 16 17 18 19 20 21 22 23</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'solution'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>hours</span>: 24</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-8a3dd6bb-b416-4741-8018-7e57da60cf25' class='xr-array-in' type='checkbox' checked><label for='section-8a3dd6bb-b416-4741-8018-7e57da60cf25' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0., 0., 0., 0., 0.])</pre></div></div></li><li class='xr-section-item'><input id='section-be81ce5b-8f1d-4586-9ffd-c89659e37361' class='xr-section-summary-in' type='checkbox'  checked><label for='section-be81ce5b-8f1d-4586-9ffd-c89659e37361' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>hours</span></div><div class='xr-var-dims'>(hours)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0 1 2 3 4 5 6 ... 18 19 20 21 22 23</div><input id='attrs-c91f65c8-b925-41c2-9605-74df36fcb56e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c91f65c8-b925-41c2-9605-74df36fcb56e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-634e304e-26d5-409b-95a4-aae59bd7fca1' class='xr-var-data-in' type='checkbox'><label for='data-634e304e-26d5-409b-95a4-aae59bd7fca1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-       "       18, 19, 20, 21, 22, 23], dtype=int64)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-341c7b18-995e-4c9d-9a03-c3be4d9c9c6b' class='xr-section-summary-in' type='checkbox'  ><label for='section-341c7b18-995e-4c9d-9a03-c3be4d9c9c6b' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>hours</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-f33e21a5-4a3b-4e99-aa44-628558864c30' class='xr-index-data-in' type='checkbox'/><label for='index-f33e21a5-4a3b-4e99-aa44-628558864c30' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(RangeIndex(start=0, stop=24, step=1, name=&#x27;hours&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3ff2a9a3-8757-457b-bf0a-a8dcc7a36f41' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-3ff2a9a3-8757-457b-bf0a-a8dcc7a36f41' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "  * hours    (hours) int64 0 1 2 3 4 5 6 7 8 9 ... 14 15 16 17 18 19 20 21 22 23</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'solution'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>hours</span>: 24</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-485a2298-af26-4360-9375-29d848929db0' class='xr-array-in' type='checkbox' checked><label for='section-485a2298-af26-4360-9375-29d848929db0' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0 ... 0.0 0.0 0.0 0.0 0.0 0.0 0.0 0.0</span></div><div class='xr-array-data'><pre>array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "       0., 0., 0., 0., 0., 0., 0.])</pre></div></div></li><li class='xr-section-item'><input id='section-2eed4d54-eee7-4d7f-97cb-2e5b7f1f6f3e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-2eed4d54-eee7-4d7f-97cb-2e5b7f1f6f3e' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>hours</span></div><div class='xr-var-dims'>(hours)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0 1 2 3 4 5 6 ... 18 19 20 21 22 23</div><input id='attrs-a5c1160c-5e37-4b93-963c-d8f947bd4a71' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a5c1160c-5e37-4b93-963c-d8f947bd4a71' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3fff0402-dc36-4087-afad-55ee73877d33' class='xr-var-data-in' type='checkbox'><label for='data-3fff0402-dc36-4087-afad-55ee73877d33' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
+       "       18, 19, 20, 21, 22, 23], dtype=int64)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-88884395-d7ce-473f-90e2-7cc7e2309bfa' class='xr-section-summary-in' type='checkbox'  ><label for='section-88884395-d7ce-473f-90e2-7cc7e2309bfa' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>hours</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-f73888b7-6167-4f03-9c7b-15ffe85b05b6' class='xr-index-data-in' type='checkbox'/><label for='index-f73888b7-6167-4f03-9c7b-15ffe85b05b6' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(RangeIndex(start=0, stop=24, step=1, name=&#x27;hours&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3d5c15b7-1ede-41a4-9d1d-d99d81107db0' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-3d5c15b7-1ede-41a4-9d1d-d99d81107db0' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'solution' (hours: 24)>\n",
@@ -1021,7 +1025,7 @@
        "  * hours    (hours) int64 0 1 2 3 4 5 6 7 8 9 ... 14 15 16 17 18 19 20 21 22 23"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1032,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
@@ -1213,7 +1217,7 @@
        "23  0.700000  0.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
