function did't work

--- a/linopy/SimpleModel.ipynb
+++ b/linopy/SimpleModel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"code insede function did't work\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"Creating parameters from a DataFrame wich could be imported from a csv or xlsx file\"\n",
     "data = pd.DataFrame({\n",
@@ -104,10 +115,15 @@
     "})\n",
     "\n",
     "Parameters = xr.Dataset.from_dataframe(data.set_index(tech))\n",
-    "def store_parameters(parameters):\n",
-    "    for i in Parameters.data_vars:\n",
-    "        locals()[i] = Parameters[i]   \n",
-    "store_parameters(Parameters)\n"
+    "\n",
+    "for parameter in Parameters.data_vars:\n",
+    "        locals()[parameter] = Parameters[parameter]\n",
+    "\n",
+    "\"code insede function did't work\"\n",
+    "# def store_parameters(parameters):\n",
+    "#     for i in Parameters.data_vars:\n",
+    "#         locals()[i] = Parameters[i]   \n",
+    "# store_parameters(Parameters)"
    ]
   },
   {
@@ -119,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +208,7 @@
        "+0.5959 capacity[Sti] + 0.7123 capacity[PV] + 0.08014 capacity[ES] + 0.007671 capacity[HS]"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +237,7 @@
        "+0.5959 capacity[Sti] + 0.7123 capacity[PV] + 0.08014 capacity[ES] + 0.007671 capacity[HS]"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +308,7 @@
        "'Crear restricciones de almacenamiento con condicionales'"
       ]
      },
-     "execution_count": 279,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +369,7 @@
        "('ok', 'optimal')"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +428,7 @@
        "0     0.35  0.932941  3.856561  0.0"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +455,7 @@
        "Text(0, 0.5, 'Power(kW)')"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -460,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +657,7 @@
        "23  0.0  0.0"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
